fix: student post service
